removed padding from unordered list, was causing issue with center alignment

--- a/styles.css
+++ b/styles.css
@@ -8,4 +8,5 @@ ul > img {
 }
 ul {
     text-align: center;
+    padding: 0;
 }
